# honeyup

./: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  docker-compose.yml  entrypoint.sh
conf/: honeyup.service  nginx_snippet.conf
res/: config.env.txt  index.html  phpinfo.php.html  upload.php.html
res/backup/: index.html  sakila.sql
res/files/: index.html
src/: main.rs
uploaded_files/: test.txt
