[package]
name = "honeyup"
version = "0.1.0"
edition = "2018"
author = "Chad Baxter <cbax@doslabelectronics.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
warp = "0.2.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3.5", default-features = false }
bytes = "0.5.6"
mime_guess = "2.0.3"
walkdir = "2"