[package]
name = "honeyup"
version = "0.1.0"
edition = "2018"
author = "Chad Baxter <cbax@doslabelectronics.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4"
tokio = { version = "0.2", features = ["macros","rt-threaded", "fs"] }
warp = "0.2.5"
uuid = { version = "1.11.0", features = ["v4"] }
futures = { version = "0.3.31", default-features = false }
bytes = "0.5.6"
mime_guess = "2.0.5"
walkdir = "2"
dotenv = "0.15.0"
ureq = "2.10.1"
